--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -6,5 +6,6 @@
 <h3>{{ message }}</h3>
 
 <p>Esta aplicação gerencia vestibulares.</p>
+<p>Equipe teste, composta por 5 integrantes fictícios</p>
 
 {% endblock %}
