--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -7,14 +7,15 @@
 
 <address>
     Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Rua do Código, 1000<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    (11) 91010-1010
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com.br">Suporte@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com.br">Marketing@example.com</a>
+    <strong>Supervisor:</strong> <a href="mailto:supervisorempresateste@example.com.br">supervisor_empresa_teste@example.com</a>
 </address>
 
 {% endblock %}
