--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -13,9 +13,9 @@
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com.br">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com.br">Marketing@example.com</a>
-    <strong>Supervisor:</strong> <a href="mailto:supervisorempresateste@example.com.br">supervisor_empresa_teste@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com.br">Suporte@example.com.br</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com.br">Marketing@example.com.br</a>
+    <strong>Supervisor:</strong> <a href="mailto:supervisorempresateste@example.com.br">supervisor_empresa_teste@example.com.br</a>
 </address>
 
 {% endblock %}
